tests/NormalTests/paczka1/fuzzy1/12584579.err
Error in line 7: ibCFo28Tu9 A740 30,5
Error in line 11: lLXCnKH A740 86,4
Error in line 17: A527 A527 14,2
